Bug 326519 - Removing contact from a group does not update model immediately in kpeople mode
Summary: Removing contact from a group does not update model immediately in kpeople mode
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-23 17:25 UTC by David Edmundson
Modified: 2013-10-25 16:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-10-23 17:25:03 UTC
Removing contact from a group does not update model immediately in kpeople mode
Comment 1 David Edmundson 2013-10-23 17:26:32 UTC
Nepomuk updates correctly - (as tested with the ShowInfo view)

Not sure if this is a bug with kpeople, translations proxy (not passing dataChanged) or the grouping model.

I'd be surprised if it's the grouping model given it works in non kpeople mode.
Comment 2 David Edmundson 2013-10-24 08:49:12 UTC
added debug and found where it is going wrong.

When dataChanged() is called new groups have been added but old groups have not been removed.

So this is a bug in the libkpeople model.
Comment 3 David Edmundson 2013-10-24 15:32:28 UTC
Git commit b2027a691acf9c2161eac895eda37311ea6fd71e by David Edmundson.
Committed on 23/10/2013 at 15:29.
Pushed by davidedmundson into branch 'master'.

Flush out old data (such as groups) when reloading

M  +7    -0    src/contactitem.cpp
M  +2    -0    src/contactitem_p.h
M  +6    -1    src/personsmodel.cpp

http://commits.kde.org/libkpeople/b2027a691acf9c2161eac895eda37311ea6fd71e
Comment 4 David Edmundson 2013-10-25 16:14:28 UTC
Git commit 1503fcf01a253eaba7589210117b971e5217a705 by David Edmundson.
Committed on 23/10/2013 at 15:29.
Pushed by davidedmundson into tag 'v0.1.0'.

Flush out old data (such as groups) when reloading

M  +7    -0    src/contactitem.cpp
M  +2    -0    src/contactitem_p.h
M  +6    -1    src/personsmodel.cpp

http://commits.kde.org/libkpeople/1503fcf01a253eaba7589210117b971e5217a705
Comment 5 David Edmundson 2013-10-25 16:15:17 UTC
Git commit c21aa3ab37f88cafbebd1dd15176aefa0384dbac by David Edmundson.
Committed on 23/10/2013 at 15:29.
Pushed by davidedmundson into branch 'libkpeople-0.1'.

Flush out old data (such as groups) when reloading

M  +7    -0    src/contactitem.cpp
M  +2    -0    src/contactitem_p.h
M  +6    -1    src/personsmodel.cpp

http://commits.kde.org/libkpeople/c21aa3ab37f88cafbebd1dd15176aefa0384dbac