Flush out old data (such as groups) when reloading

BUG: 326519